# ragkit

./: .env.example  .gitignore  README.en.md  README.md  docker-compose.yml
admin/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
docs/: user-guide.en.md  user-guide.ko.md
server/: README.md  alembic.ini  config.yaml  pyproject.toml  run.sh
server/alembic/: env.py
server/alembic/versions/: 0001_initial_schema.py  0002_drop_orphan_is_superadmin.py  0003_add_chunk_config.py
server/app/: main.py
server/app/api/: auth.py  deps.py  documents.py  ingest.py  search.py  services.py  users.py
server/app/core/: config.py  logging.py  paths.py
server/app/db/: base.py  bootstrap.py  models.py  session.py
server/app/embeddings/: __init__.py  azure_openai.py  base.py  factory.py  ollama.py  tei.py  vllm.py
server/app/ingest/: __init__.py  chunking.py  loaders.py  pipeline.py
server/app/mappers/: __init__.py  document_mapper.py
server/app/rag/: __init__.py  chain.py
server/app/schemas/: auth.py  documents.py  search.py  services.py  users.py
server/app/security/: passwords.py  tokens.py
server/app/services/: documents.py  indexing.py
server/app/storage/: __init__.py  base.py  factory.py  local.py  s3.py
server/app/vectorstore/: __init__.py  base.py  qdrant.py
server/tests/: test_smoke.py
server/tests/sample-docs/: api-style-rules.md  incident-playbook.md  onboarding-guide.md  release-checklist.md
(+29 files in other folders)
